--- a/css/_page.scss
+++ b/css/_page.scss
@@ -9,6 +9,9 @@
     li {
         width: calc(50% - 5px);
         margin-bottom: 10px;
+        @include rwd(800){
+            width: 100%;
+        }
         &:last-child:nth-child(odd) {
             width: 100%;
         }
@@ -21,7 +24,8 @@
     .betTitle {
         margin-bottom: 15px;
         display: flex;
-        align-items: flex-end;
+        flex-wrap: wrap;
+        align-items: center;
         color: #f7e6be;
         .icon {
             width: 22px;
@@ -30,17 +34,36 @@
         }
         span {
             display: inline-block;
-            padding: 0 10px;
+            padding: 5px 10px;
         }
     }
     table {
         width: 100%;
         background-color: #444;
         border-radius: 10px;
+        overflow: hidden;
+    }
+    tbody {
+        @include rwd(1250) {
+            display: flex;
+            flex-wrap: wrap; 
+        }
     }
     tr {
         width: 100%;
         position: relative;
+        @include rwd(1250) {
+            width: calc(100% / 3);
+            display: flex;
+            flex-wrap: wrap;
+            box-shadow: 0px 0px 1px #fff inset;
+        }
+        @include rwd(950) {
+            width: calc(100% / 2);
+        }
+        @include rwd(650) {
+            width: 100%;
+        }
         & .betNb {
             width: 81px;
             height: 57px;
@@ -82,7 +105,7 @@
             }
         }
     }
-    tr+tr::before {
+    tr + tr::before {
         content: "";
         width: calc(100% - 40px);
         height: 1px;
@@ -91,6 +114,9 @@
         box-shadow: 0 1px 1px #626262;
         position: absolute;
         @include pos(tlr, 0);
+        @include rwd(1250) {
+            display: none;
+        }
     }
     th {
         height: 110px;
@@ -98,6 +124,12 @@
         display: flex;
         align-items: center;
         position: relative;
+        @include rwd(1250) {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
         &::before {
             content: "";
             width: 1px;
@@ -107,6 +139,9 @@
             box-shadow: 1px 0 1px #626262;
             position: absolute;
             @include pos(tbr, 0);
+            @include rwd(1250) {
+                display: none;
+            }
         }
         .betLogo {
             width: 125px;
@@ -117,6 +152,12 @@
         height: 110px;
         padding: 0 20px;
         position: relative;
+        @include rwd(1250) {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
         &::before {
             content: "";
             width: 1px;
@@ -126,7 +167,16 @@
             box-shadow: 1px 0 1px #626262;
             position: absolute;
             @include pos(tbr, 0);
+            @include rwd(1250) {
+                display: none;
+            }
         }
+        &:nth-child(2) {
+            @include rwd(1250) {
+                flex-direction: column;
+            }
+        }
+
         &:last-child {
             width: 100%;
             &::before {
@@ -198,7 +248,11 @@
         .betBtn {
             display: flex;
             cursor: pointer;
-            &>.btn {
+            @include rwd(1250) {
+                width: 100%;
+                flex-direction: column;
+            }
+            & > .btn {
                 height: 40px;
                 border-radius: 20px;
                 flex: 1;
@@ -220,8 +274,12 @@
                     }
                 }
             }
-            &>.btn+.btn {
+            & > .btn + .btn {
                 margin-left: 10px;
+                @include rwd(1250) {
+                    margin-left: 0;
+                    margin-top: 10px;
+                }
             }
         }
     }
@@ -231,7 +289,7 @@
 .mainMsg {
     padding: 20px;
     background-color: #fff;
-    &>div+div {
+    & > div + div {
         margin-top: 40px;
     }
 }
@@ -258,28 +316,45 @@
     .mainNews_t {
         display: flex;
         margin-bottom: 20px;
+        @include rwd(950){
+           flex-direction: column;
+        }
         .news_main {
+            flex: 2;
+            margin-right: 20px;
+            @include rwd(950){
+                margin-bottom: 20px;
+                margin-right: 0;
+            }
             .news_mainImg {
-                width: 750px;
+                width: 100%;
                 height: 410px;
                 overflow: hidden;
                 position: relative;
-                background: no-repeat center top /cover;
-                margin-right: 20px;
+                background: no-repeat center top / cover;
                 flex-shrink: 0;
+                @include rwd(950){
+                   height: 0;
+                   padding-bottom: 60%;
+                }
                 p {
                     padding: 15px;
                     font-size: 1.6rem;
                     background-color: rgba(0, 0, 0, 0.75);
                     position: absolute;
                     @include pos(blr, 0);
+                    @include rwd(950){
+                        padding: 10px;
+                        font-size: 1.1rem;
+                    }
                 }
+               
             }
         }
         .news_list {
-            height: 410px;
+            flex: 1; 
             .newsList_cnt {
-                height: 100%;
+                max-height: 410px;
                 overflow-y: scroll;
             }
             li {
@@ -287,7 +362,7 @@
                 .newsList_img {
                     width: 100px;
                     height: 66px;
-                    background: no-repeat center top /cover;
+                    background: no-repeat center top / cover;
                     flex-shrink: 0;
                 }
                 p {
@@ -297,7 +372,7 @@
                     @include txtChip(3);
                 }
             }
-            li+li {
+            li + li {
                 margin-top: 10px;
             }
         }
@@ -305,9 +380,21 @@
     @at-root .mainNews_b {
         ul {
             display: flex;
+            flex-wrap: wrap;
+            @include rwd(850){
+                justify-content: space-between;
+            }
         }
         li {
             flex: 1;
+            @include rwd(850){
+                width: calc(50% - 10px);
+                flex: unset;
+                padding-bottom: 20px;
+            }
+            @include rwd(500){
+               width: 100%;
+            }
             .img {
                 width: 100%;
                 height: 0;
@@ -320,8 +407,11 @@
                 @include txtChip(3);
             }
         }
-        li+li {
+        li + li {
             margin-left: 20px;
+            @include rwd(850){
+                margin-left: 0;
+            }
         }
         .newsList_img {
             height: 0;
@@ -347,8 +437,14 @@
 .mainRec {
     display: flex;
     justify-content: space-between;
-    &>div {
+    @include rwd(1100){
+        flex-direction: column;
+    }
+    & > div {
         width: calc(50% - 10px);
+        @include rwd(1100){
+            width: 100%;
+        }
     }
     .recCount {
         display: flex;
@@ -358,16 +454,26 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            &>div {
+            @include rwd(1100){
+                flex-direction: row;
+            }     
+            & > div {
                 height: calc(50% - 5px);
                 display: flex;
                 color: #000;
+                @include rwd(1100){
+                   width: 50%;
+                }
             }
             .listImg {
                 width: calc(50% - 10px);
                 height: 100%;
                 background: no-repeat center top/cover;
                 flex-shrink: 0;
+                @include rwd(1100){
+                    height: 0;
+                    padding-bottom: 40%;
+                }
             }
             .listMsg {
                 padding: 0 20px;
@@ -420,7 +526,7 @@
 
 // wsDict start
 .wsDict {
-    &>div {
+    & > div {
         display: flex;
     }
     .wsDict_msg {
@@ -454,7 +560,7 @@
     }
     .lotteryList {
         padding-left: 10px;
-        &>li {
+        & > li {
             display: flex;
             .icon {
                 width: 21px;
@@ -464,7 +570,7 @@
                 margin-right: 15px;
             }
         }
-        &>li+li {
+        & > li + li {
             margin-top: 20px;
         }
     }
@@ -485,7 +591,7 @@
             width: 260px;
             height: 0;
             padding-bottom: 13%;
-            background: no-repeat center /cover;
+            background: no-repeat center / cover;
             flex-shrink: 0;
         }
         .fullList_msg {
@@ -511,7 +617,7 @@
                 span {
                     font-size: 1rem;
                 }
-                span+span {
+                span + span {
                     margin-left: 10px;
                 }
             }
@@ -527,7 +633,7 @@
             }
         }
     }
-    li+li {
+    li + li {
         &::before {
             content: "";
             width: 100%;
