--- a/css/all.css
+++ b/css/all.css
@@ -1332,7 +1332,7 @@ body {
 }
 
 .header .hd_top .hd_tool {
-  width: 685px;
+  max-width: 685px;
   height: 100%;
   padding-bottom: 20px;
 }
@@ -1546,6 +1546,13 @@ body {
 .header .hd_top .hd_signIn label input::-webkit-input-placeholder {
   font-size: 1rem;
   font-weight: bold;
+}
+
+.header .hd_top .hd_signIn .signIn_on {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .header .hd_top .hd_signIn .signIn_msg {
@@ -1820,6 +1827,12 @@ body {
   padding: 0 20px;
 }
 
+@media screen and (max-width: 1280px) {
+  .mainCnt .contBox-full > .contBox-min > .flexAd {
+    padding: 0 10px;
+  }
+}
+
 .mainCnt .contBox-full .leftTool,
 .mainCnt .contBox-full .rightTool {
   width: 97px;
@@ -1946,6 +1959,12 @@ body {
   max-width: 1280px;
   margin: auto;
   padding: 0 20px;
+}
+
+@media screen and (max-width: 1280px) {
+  .contBox-min {
+    padding: 0;
+  }
 }
 
 .content {
@@ -3633,15 +3652,7 @@ body {
           transform: translateX(-10%) skew(30deg);
 }
 
-.wsDict > div {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
 .wsDict .wsDict_msg {
-  width: calc(100% - 380px);
-  padding-right: 30px;
   color: #000;
   font-size: 1.2rem;
 }
@@ -3657,9 +3668,17 @@ body {
 }
 
 .wsDict .wsDictImg {
-  width: 380px;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
+  width: 300px;
+  float: right;
+  margin: 0 0 10px 10px;
+}
+
+@media screen and (max-width: 600px) {
+  .wsDict .wsDictImg {
+    width: 100%;
+    float: unset;
+    margin: 0 0 20px;
+  }
 }
 
 .fullDict {
