--- a/css/_page.scss
+++ b/css/_page.scss
@@ -105,7 +105,7 @@
             }
         }
     }
-    tr+tr::before {
+    tr + tr::before {
         content: "";
         width: calc(100% - 40px);
         height: 1px;
@@ -251,7 +251,7 @@
                 width: 100%;
                 flex-direction: column;
             }
-            &>.btn {
+            & > .btn {
                 height: 40px;
                 border-radius: 20px;
                 flex: 1;
@@ -273,7 +273,7 @@
                     }
                 }
             }
-            &>.btn+.btn {
+            & > .btn + .btn {
                 margin-left: 10px;
                 @include rwd(1250) {
                     margin-left: 0;
@@ -288,7 +288,7 @@
 .mainMsg {
     padding: 20px;
     background-color: #fff;
-    &>div+div {
+    & > div + div {
         margin-top: 40px;
     }
 }
@@ -358,8 +358,8 @@
             li {
                 display: flex;
                 .newsList_img {
-                    width: 100px;
-                    height: 66px;
+                    width: 109px;
+                    height: 72px;
                     background: no-repeat center top / cover;
                     flex-shrink: 0;
                 }
@@ -370,7 +370,7 @@
                     @include txtChip(3);
                 }
             }
-            li+li {
+            li + li {
                 margin-top: 10px;
             }
         }
@@ -405,7 +405,7 @@
                 @include txtChip(3);
             }
         }
-        li+li {
+        li + li {
             margin-left: 20px;
             @include rwd(850) {
                 margin-left: 0;
@@ -434,7 +434,7 @@
     @include rwd(1100) {
         flex-direction: column;
     }
-    &>div {
+    & > div {
         width: calc(50% - 10px);
         @include rwd(1100) {
             width: 100%;
@@ -454,7 +454,7 @@
             @include rwd(850) {
                 flex-direction: column;
             }
-            &>div {
+            & > div {
                 height: calc(50% - 5px);
                 display: flex;
                 color: #000;
@@ -559,7 +559,7 @@
         width: 300px;
         float: right;
         margin: 0 0 10px 10px;
-        @include rwd(600){
+        @include rwd(600) {
             width: 100%;
             float: unset;
             margin: 0 0 20px;
@@ -578,7 +578,7 @@
     }
     .lotteryList {
         padding-left: 10px;
-        &>li {
+        & > li {
             display: flex;
             .icon {
                 width: 21px;
@@ -588,7 +588,7 @@
                 margin-right: 15px;
             }
         }
-        &>li+li {
+        & > li + li {
             margin-top: 20px;
         }
     }
@@ -642,7 +642,7 @@
                 span {
                     font-size: 1rem;
                 }
-                span+span {
+                span + span {
                     margin-left: 10px;
                 }
             }
@@ -658,7 +658,7 @@
             }
         }
     }
-    li+li {
+    li + li {
         &::before {
             content: "";
             width: 100%;
@@ -668,6 +668,71 @@
             position: absolute;
             top: 0;
             left: 0;
+        }
+    }
+}
+
+// 爬蟲新聞內頁(home)
+.newsCnt_h {
+    padding: 20px;
+    margin: auto;
+    color: #333;
+    background-color: #fff;
+    @include rwd(1280) {
+        width: calc(100% - 20px);
+    }
+
+    @at-root .newsCnt_title {
+        font-size: 1.8rem;
+        font-weight: bold;
+    }
+
+    @at-root .newsCnt_time {
+        margin: 10px 0 20px;
+        padding: 10px 5px;
+        text-align: right;
+        background-color: #f2f2f2;
+        color: #999;
+        font-size: 0.85rem;
+        border-top: 1px solid #c5c5c5;
+        border-bottom: 1px solid #c5c5c5;
+    }
+
+    @at-root .newsCnt_body {
+        p {
+            margin-bottom: 20px;
+            line-height: 24px;
+        }
+        .expNoEdit {
+            padding: 0;
+            margin: 50px 0;
+            h2 {
+                padding-top: 10px;
+                line-height: 22px;
+            }
+            img {
+                width: 100% !important;
+                height: auto !important;
+            }
+        }
+
+        .dugout-video {
+            display: none;
+        }
+
+        .text-right {
+            padding-top: 50px;
+            font-size: 0.95rem;
+            color: #999;
+            text-align: right;
+        }
+
+        ul {
+            padding-left: 20px;
+            margin: 40px 0;
+            color: #099adb;
+            line-height: 24px;
+            list-style: disc;
         }
     }
 }
