--- a/css/_page.scss
+++ b/css/_page.scss
@@ -683,13 +683,18 @@
     }
 
     @at-root .newsCnt_title {
-        font-size: 1.8rem;
+        font-size: 2rem;
+        line-height: 2.2rem;
         font-weight: bold;
+        @include rwd(800) {
+            font-size: 1.3rem;
+            line-height: 1.5rem;
+        }
     }
 
     @at-root .newsCnt_time {
         margin: 10px 0 20px;
-        padding: 10px 5px;
+        padding: 8px 5px;
         text-align: right;
         background-color: #f2f2f2;
         color: #999;
